<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        tools:context=".InfoActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SMART Goals"
                    android:textSize="32sp"
                    android:textColor="@color/Black"
                    android:textAlignment="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specific"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specific_text"
                    android:textSize="16sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measurable"
                    android:textSize="24sp"
                    android:textColor="@color/Black"

            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measurable_text"
                    android:textSize="16sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/achievable"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/achievable_text"
                    android:textSize="16sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relevant"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relevant_text"
                    android:textSize="16sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timely"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timely_text"
                    android:textSize="16sp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text=" "
                    android:layout_weight="1"
            />

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Close"
                    android:id="@+id/close_btn_info"
                    android:layout_gravity="bottom"
            />

        </LinearLayout>

    </ScrollView>


</LinearLayout>